添加商品不存在提示

--- a/front/src/main/webapp/WEB-INF/views/tb/goods_info.html
+++ b/front/src/main/webapp/WEB-INF/views/tb/goods_info.html
@@ -84,6 +84,7 @@
 
     <div class="c_div_10px"></div>
     <div class="c_info_text c_center_text">-----图文详情参见淘宝商品详情-----</div>
+    <div id="itemInfoList"></div>
 
     <!-- 广告海报页面设计,不展示,为canvas绘制图片所用 -->
     <div id="canvasToImageDiv" style="display: none; width: 1000px;">
