--- a/front/src/main/webapp/static/css/tb/good_info.css
+++ b/front/src/main/webapp/static/css/tb/good_info.css
@@ -28,7 +28,7 @@
     position: fixed;
     color: #ffffff;
     font-weight: bolder;
-    top: 30px;
+    /*top: 30px;*/
     width: 100%;
     text-align: center;
     line-height: 40px;
