--- a/front/src/main/webapp/WEB-INF/views/tb/goods_list.html
+++ b/front/src/main/webapp/WEB-INF/views/tb/goods_list.html
@@ -34,6 +34,20 @@
                 background-color: #ED6D27;
                 overflow: auto;
             }
+            .c_footer {
+                width: 100%;
+                bottom: 0px;
+                height: 17px;
+                line-height: 17px;
+                text-align: center;
+                position: fixed;
+                background-color: #ED6D27;
+                overflow: auto;
+                font-size: 12px;
+            }
+            .c_footer a {
+                color: #ffffff;
+            }
             .mui-content>.mui-table-view:first-child {
                 margin-top: -1px;
             }
@@ -59,12 +73,14 @@
     <body class="c_container">
         <div class="c_header">
             <div class="c_header_icon">
-                <img class="c_header_icon_logo" src="${ctx}/static/image/icon/cash_coupon.png">
+                <img class="c_header_icon_logo" src="${ctx}/static/image/icon/findcoupon.png">
             </div>
             <div class="c_header_text">
                 限时特惠
             </div>
-            <div class="c_header_icon"></div>
+            <div class="c_header_icon" onclick="toJdHelpUi()">
+                <img class="c_header_icon_logo" src="${ctx}/static/image/icon/course.png">
+            </div>
         </div>
         <!--下拉刷新容器-->
         <div id="pullrefresh" class="mui-content mui-scroll-wrapper">
@@ -72,6 +88,9 @@
                 <!--数据列表-->
                 <ul id="dataList" class="mui-table-view mui-table-view-chevron" style="background-color: #efeff4;"></ul>
             </div>
+        </div>
+        <div class="c_footer">
+            <a color="#000" href="http://www.beian.miit.gov.cn/">陕ICP备19015519号</a>
         </div>
         <script>
             var pageNum = 1;
@@ -165,6 +184,10 @@
 
             function toGoodsInfo(id) {
                 window.location.href = ctx + "/tb/goodsInfoUi/"+id;
+            }
+
+            function toJdHelpUi() {
+                window.location.href = ctx + "/docs/tbAppHelp";
             }
 
         </script>
