--- a/front/src/main/webapp/WEB-INF/views/docs/jd_app_help.html
+++ b/front/src/main/webapp/WEB-INF/views/docs/jd_app_help.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>淘宝分享帮助</title>
+    <title>返利教程</title>
     <meta name="viewport" content="width=device-width, initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
