--- a/front/src/main/webapp/WEB-INF/views/tb/goods_list.html
+++ b/front/src/main/webapp/WEB-INF/views/tb/goods_list.html
@@ -54,6 +54,7 @@
             .c_item {height: 130px; background-color: #ffffff; margin: 8px; border-radius: 8px; overflow: auto;}
             .c_header_icon {float: left; width: 13%; text-align: center;}
             .c_header_text {float: left; width: 74%; text-align: center; line-height: 50px; color: #ffffff;}
+            .c_header_text input {height: 33px; margin: 0; border-radius: 10px; color: #0f0f0f;}
             .c_header_icon_logo {width: 30px; margin-top: 10px;}
             .c_left_div {float: left; width: 130px; height: 130px; padding: 5px; border-radius: 5px;}
             .c_left_img {width: 120px; height: 120px;}
@@ -76,7 +77,7 @@
                 <img class="c_header_icon_logo" src="${ctx}/static/image/icon/findcoupon.png">
             </div>
             <div class="c_header_text">
-                限时特惠
+                <input type="text" id="search" placeholder="请输入" onBlur="search()">
             </div>
             <div class="c_header_icon" onclick="toJdHelpUi()">
                 <img class="c_header_icon_logo" src="${ctx}/static/image/icon/course.png">
@@ -128,8 +129,12 @@
             }
 
             function initData(pageno) {
+                var text = $("#search").val();
+                if(text == undefined || text == "") {
+                    text = ".";
+                }
                 $.ajax({
-                    url: ctx + "/tb/goodsList?pageNum="+pageno,
+                    url: ctx + "/tb/searchGoodsList?keyword="+text+"&pageno="+pageno,
                     type: "GET",
                     dataType: "JSON",
                     async:false,
@@ -190,6 +195,9 @@
                 window.location.href = ctx + "/docs/tbAppHelp";
             }
 
+            function search() {
+                pulldownRefresh();
+            }
         </script>
     </body>
 </html>
