--- a/front/src/main/webapp/WEB-INF/views/tb/goods_list.html
+++ b/front/src/main/webapp/WEB-INF/views/tb/goods_list.html
@@ -7,71 +7,10 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <script type="text/javascript">var ctx = '${ctx}'</script>
-        <script type="text/javascript" src="${ctx}/static/js/jquery-1.10.2.min.js"></script>
-        <script type="text/javascript" src="${ctx}/static/plugins/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
-        <script type="text/javascript" src="${ctx}/static/plugins/swiper-4.5.0/js/swiper.min.js"></script>
-        <script type="text/javascript" src="${ctx}/static/plugins/mui/js/mui.min.js"></script>
-        <link type="text/css" rel="stylesheet" href="${ctx}/static/plugins/bootstrap-3.3.7-dist/css/bootstrap.css"/>
-        <link type="text/css" rel="stylesheet" href="${ctx}/static/plugins/bootstrap-3.3.7-dist/css/bootstrap-theme.css"/>
-        <link type="text/css" rel="stylesheet" href="${ctx}/static/plugins/font-awesome-4.7.0/css/font-awesome.css"/>
-        <link type="text/css" rel="stylesheet" href="${ctx}/static/plugins/swiper-4.5.0/css/swiper.min.css">
         <link type="text/css" rel="stylesheet" href="${ctx}/static/plugins/mui/css/mui.min.css">
-        <style type="text/css">
-            * {
-                margin: 0;
-                padding: 0;
-            }
-            .c_container {
-                height: 100%;
-                overflow: auto;
-                background-color: #efeff4;
-            }
-            .c_header {
-                width: 100%;
-                top: 0px;
-                height: 50px;
-                position: fixed;
-                background-color: #ED6D27;
-                overflow: auto;
-            }
-            .c_footer {
-                width: 100%;
-                bottom: 0px;
-                height: 17px;
-                line-height: 17px;
-                text-align: center;
-                position: fixed;
-                background-color: #ED6D27;
-                overflow: auto;
-                font-size: 12px;
-            }
-            .c_footer a {
-                color: #ffffff;
-            }
-            .mui-content>.mui-table-view:first-child {
-                margin-top: -1px;
-            }
-            .c_item {height: 130px; background-color: #ffffff; margin: 8px; border-radius: 8px; overflow: auto;}
-            .c_header_icon {float: left; width: 13%; text-align: center;}
-            .c_header_text {float: left; width: 74%; text-align: center; line-height: 50px; color: #ffffff;}
-            .c_header_text input {height: 33px; margin: 0; border-radius: 10px; color: #0f0f0f;}
-            .c_header_icon_logo {width: 30px; margin-top: 10px;}
-            .c_left_div {float: left; width: 130px; height: 130px; padding: 5px; border-radius: 5px;}
-            .c_left_img {width: 120px; height: 120px;}
-            .c_right_div {float: left; width: calc(100% - 130px); padding: 5px; border-radius: 5px; height: 130px;}
-            .c_right_div_2 {height: 87px;}
-            .c_right_title {font-weight: bolder; font-size: 12px; overflow:hidden; text-overflow:ellipsis;display:-webkit-box;-webkit-box-orient:vertical; -webkit-line-clamp:2;}
-            .c_right_info {font-size: 12px; color: #8c8c8c;}
-            .c_right_div_3 {height: 32px;}
-            .c_right_div_4 {float: left; width: 50%; line-height: 32px;}
-            .c_right_nowPrice {font-size: 15px; color: #ed6d27;}
-            .c_right_reservePrice {font-size: 12px; color: #8c8c8c; text-decoration:line-through;}
-            .c_right_div_5 {float: left; width: 50%; text-align: right;}
-            .c_right_button {background-color: #e95727; color: #ffffff;}
-            .c_right_tag {background-color: #fdf6f2; padding: 2px 10px; border-radius: 10px; color: #ea521c; font-size: 12px;}
-        </style>
+        <link type="text/css" rel="stylesheet" href="${ctx}/static/css/tb/goods_list.css">
     </head>
-    <body class="c_container">
+    <body>
         <div class="c_header">
             <div class="c_header_icon">
                 <img class="c_header_icon_logo" src="${ctx}/static/image/icon/findcoupon.png">
@@ -86,127 +25,35 @@
                 <img class="c_header_icon_logo" src="${ctx}/static/image/icon/course.png">
             </div>
         </div>
-        <!--下拉刷新容器-->
-        <div id="pullrefresh" class="mui-content mui-scroll-wrapper">
-            <div class="mui-scroll">
-                <!--数据列表-->
-                <ul id="dataList" class="mui-table-view mui-table-view-chevron" style="background-color: #efeff4;"></ul>
+        <div class="mui-content">
+            <div id="slider" class="mui-slider mui-fullscreen">
+                <!--<div id="sliderSegmentedControl" class="mui-scroll-wrapper mui-slider-indicator mui-segmented-control mui-segmented-control-inverted">
+                    <div class="mui-scroll">
+                        <a class="mui-control-item mui-active" href="javascript:void(0)">默认</a>
+                        <a class="mui-control-item" href="javascript:void(0)">价格</a>
+                        <a class="mui-control-item" href="javascript:void(0)">销量</a>
+                        <a class="mui-control-item" href="javascript:void(0)">天猫</a>
+                        <a class="mui-control-item" href="javascript:void(0)">优惠券</a>
+                    </div>
+                </div>-->
+                <div class="mui-slider-group">
+                    <div id="itemMobile" class="mui-slider-item mui-control-content mui-active">
+                    <!--下拉刷新容器-->
+                        <div id="pullrefresh" class="mui-content mui-scroll-wrapper">
+                            <div class="mui-scroll">
+                                <!--数据列表-->
+                                <ul class="mui-table-view mui-table-view-chevron"></ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="c_footer">
             <a color="#000" href="http://www.beian.miit.gov.cn/">陕ICP备19015519号</a>
         </div>
-        <script>
-            var pageNum = 1;
-            mui.init({
-                pullRefresh: {
-                    container: '#pullrefresh',
-                    down: {
-                        style:'circle',
-                        callback: pulldownRefresh
-                    },
-                    up: {
-                        auto:true,
-                        contentrefresh: '正在加载...',
-                        callback: pullupRefresh
-                    }
-                }
-            });
-
-            function pullupRefresh() {
-                setTimeout(function () {
-                    initData(pageNum);
-                }, 100)
-            }
-
-            /**
-             * 下拉刷新具体业务实现,实现清空并初始化第一页数据
-             */
-            function pulldownRefresh() {
-                setTimeout(function() {
-                    mui('#pullrefresh').pullRefresh().endPulldownToRefresh(); //refresh completed
-                    $("#dataList").empty();
-                    pageNum = 1;
-                    initData(pageNum);
-                }, 100);
-            }
-
-            function initData(pageno) {
-                var text = $("#keyword").val();
-                if(text == undefined || text == "") {
-                    text = ".";
-                }
-                $.ajax({
-                    url: ctx + "/tb/searchGoodsList?keyword="+text+"&pageno="+pageno,
-                    type: "GET",
-                    dataType: "JSON",
-                    async:false,
-                    success: function (result) {
-                        if(result.code == 200) {
-                            var dataList = result.data;
-                            if(dataList == null || dataList.length == 0) {
-                                mui('#pullrefresh').pullRefresh().endPullupToRefresh((true));//参数为true代表没有更多数据了。
-                            }else{
-                                mui('#pullrefresh').pullRefresh().endPullupToRefresh((false));//参数为false代表有更多数据了
-                                var table = document.body.querySelector('.mui-table-view');
-                                for (var i = 0; i < dataList.length; i++) {
-                                    var zkFinalPrice = parseFloat(dataList[i].zkFinalPrice);
-                                    var quanlimit = parseFloat(dataList[i].quanlimit);
-                                    var youhuiquan = parseFloat(dataList[i].youhuiquan);
-                                    var truePrice;
-                                    if(zkFinalPrice >= quanlimit) {//是否满足优惠条件
-                                        truePrice = parseFloat(zkFinalPrice - youhuiquan).toFixed(2);
-                                    }else {
-                                        truePrice = zkFinalPrice.toFixed(2);
-                                    }
-                                    var div = document.createElement('div');
-                                    div.className = 'c_item';
-                                    div.innerHTML = '<div class="c_left_div">\n' +
-                                        '<img class="c_left_img" src="'+ dataList[i].pictUrl +'">\n' +
-                                        '</div>\n' +
-                                        '<div class="c_right_div">\n' +
-                                        '<div class="c_right_div_2">\n' +
-                                        '<span class="c_right_title">'+ dataList[i].title +'</span>\n' +
-                                        '<span class="c_right_tag">'+ dataList[i].couponInfo +'</span>\n' +
-                                        '<span class="c_right_info">券:'+ dataList[i].couponRemainCount +'张/'+ dataList[i].couponTotalCount +'张</span>\n' +
-                                        '<span class="c_right_info">月销:'+ dataList[i].volume +'</span><br/>\n' +
-                                        '</div>\n' +
-                                        '<div class="c_right_div_3">\n' +
-                                        '<div class="c_right_div_4">\n' +
-                                        '<span class="c_right_nowPrice">'+ truePrice +'元</span>\n' +
-                                        '<span class="c_right_reservePrice">'+ dataList[i].zkFinalPrice +'元</span>\n' +
-                                        '</div>\n' +
-                                        '<div class="c_right_div_5">\n' +
-                                        '<button class="c_right_button" onclick="toGoodsInfo('+ dataList[i].numIid +')">立即领劵</button>\n' +
-                                        '</div>\n' +
-                                        '</div>\n' +
-                                        '</div>';
-                                    table.appendChild(div);
-                                }
-                            }
-                            pageNum++;
-                        }
-                    }
-                })
-            }
-
-            function toGoodsInfo(id) {
-                window.location.href = ctx + "/tb/goodsInfoUi/"+id;
-            }
-
-            function toJdHelpUi() {
-                window.location.href = ctx + "/docs/tbAppHelp";
-            }
-
-            $(function () {
-                $("#keyword").on('keypress',function(e) {
-                    var keycode = e.keyCode;
-                    if(keycode=='13') {
-                        pulldownRefresh();
-                        document.activeElement.blur();  // 关闭软键盘
-                    }
-                });
-            })
-        </script>
     </body>
+    <script type="text/javascript" src="${ctx}/static/js/jquery-1.10.2.min.js"></script>
+    <script type="text/javascript" src="${ctx}/static/plugins/mui/js/mui.min.js"></script>
+    <script type="text/javascript" src="${ctx}/static/js/tb/goods_list.js"></script>
 </html>
