修改搜索功能,添加搜索条件快捷方式

--- a/front/src/main/webapp/WEB-INF/views/docs/jd_app_help.html
+++ b/front/src/main/webapp/WEB-INF/views/docs/jd_app_help.html
@@ -118,7 +118,7 @@
     });
 
     function toGoodsListUi() {
-        window.location.href = ctx + "/tb/goodsListUi";
+        window.location.href = ctx + "/tb/goodsListUi/list";
     }
 
     function toTbAppHelpUi() {
