--- a/front/src/main/webapp/WEB-INF/views/docs/tb_app_help.html
+++ b/front/src/main/webapp/WEB-INF/views/docs/tb_app_help.html
@@ -139,7 +139,7 @@
     });
 
     function toGoodsListUi() {
-        window.location.href = ctx + "/tb/goodsListUi";
+        window.location.href = ctx + "/tb/goodsListUi/list";
     }
 
     function toJdAppHelpUi() {
