--- a/front/src/main/webapp/WEB-INF/views/tb/goods_list.html
+++ b/front/src/main/webapp/WEB-INF/views/tb/goods_list.html
@@ -59,4 +59,7 @@
     <script type="text/javascript" src="${ctx}/static/js/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="${ctx}/static/plugins/mui/js/mui.min.js"></script>
     <script type="text/javascript" src="${ctx}/static/js/tb/goods_list.js"></script>
+    <script type="text/javascript">
+        var tag = '${tag}';
+    </script>
 </html>
